# mirlin-server

./: .clang-format  .gitignore  Dockerfile  Makefile  README.md  client.Dockerfile  docker-compose.debug.yml  docker-compose.yml  test.cpp
client/: Cargo.toml  README.md  main.cpp
client/src/: audio.rs  main.rs  util.rs
clients/basic/: README.md
clients/basic/src/: main.rs
clients/nannou_client/: Cargo.toml
clients/nannou_client/src/: main.rs
src/: Analyzer.cpp  Analyzer.hpp  CMakeLists.txt  WebsocketServer.cpp  WebsocketServer.hpp  main.cpp
