[package]
name = "nannou_client"
version = "0.1.0"
authors = ["Jules Youngberg <julesdayoungberg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.13.1"
nannou = "0.15"
serde_json = "1.0"
websocket = "0.26.2"
